crates/pluresdb-px/tests/conformance_corpus/invalid/02_invalid_procedure_header.px
procedure bad_proc(message string):
  given: "missing colon in typed parameter"
  return message
